--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,12 +45,13 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\AddLevel.cs" />
-     <Compile Include="Assets\Art\Art Asset List.cs" />
-     <Compile Include="Assets\Follow.cs" />
+     <Compile Include="Assets\MichaelPattieScripts\AddLevel.cs" />
      <Compile Include="Assets\MichaelPattieScripts\Balloon.cs" />
+     <Compile Include="Assets\MichaelPattieScripts\BalloonController.cs" />
+     <Compile Include="Assets\MichaelPattieScripts\BalloonData.cs" />
+     <Compile Include="Assets\MichaelPattieScripts\Follow.cs" />
      <Compile Include="Assets\MichaelPattieScripts\MoveLeft.cs" />
-     <Compile Include="Assets\MichaelPattieScripts\RespondToButtons.cs" />
+     <None Include="Assets\Art\Art Asset List.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
