--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,7 +50,9 @@
      <Compile Include="Assets\MichaelPattieScripts\BalloonController.cs" />
      <Compile Include="Assets\MichaelPattieScripts\BalloonData.cs" />
      <Compile Include="Assets\MichaelPattieScripts\Follow.cs" />
-     <Compile Include="Assets\MichaelPattieScripts\MoveLeft.cs" />
+     <Compile Include="Assets\MichaelPattieScripts\MoveRight.cs" />
+     <Compile Include="Assets\MichaelPattieScripts\MoveRightIndependent.cs" />
+     <Compile Include="Assets\MichaelPattieScripts\Shoot.cs" />
      <None Include="Assets\Art\Art Asset List.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
