Added files for collision sensing(not complete yet) and changed projectile tag to PlayerProjectiles

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,9 +49,12 @@
      <Compile Include="Assets\MichaelPattieScripts\Balloon.cs" />
      <Compile Include="Assets\MichaelPattieScripts\BalloonController.cs" />
      <Compile Include="Assets\MichaelPattieScripts\BalloonData.cs" />
+     <Compile Include="Assets\MichaelPattieScripts\FlagBalloonCollision.cs" />
+     <Compile Include="Assets\MichaelPattieScripts\FlagBasketCollision.cs" />
      <Compile Include="Assets\MichaelPattieScripts\Follow.cs" />
      <Compile Include="Assets\MichaelPattieScripts\MoveRight.cs" />
      <Compile Include="Assets\MichaelPattieScripts\MoveRightIndependent.cs" />
+     <Compile Include="Assets\MichaelPattieScripts\ProcessCollision.cs" />
      <Compile Include="Assets\MichaelPattieScripts\ScaleWithAirLevel.cs" />
      <Compile Include="Assets\MichaelPattieScripts\Shoot.cs" />
      <None Include="Assets\Art\Art Asset List.txt" />
