Corrected Firing Scripts
Fixed null error, corrected position of bullet and explosion
instantiation. Now projectiles will fire from the correct spot when the
turret is rotated.

--- a/LudumDare2015.CSharp.csproj
+++ b/LudumDare2015.CSharp.csproj
@@ -57,6 +57,12 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Networking">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
@@ -66,12 +72,17 @@
     <Compile Include="Assets\MichaelPattieScripts\Balloon.cs" />
     <Compile Include="Assets\MichaelPattieScripts\BalloonController.cs" />
     <Compile Include="Assets\MichaelPattieScripts\BalloonData.cs" />
+    <Compile Include="Assets\MichaelPattieScripts\FlagBalloonCollision.cs" />
+    <Compile Include="Assets\MichaelPattieScripts\FlagBasketCollision.cs" />
     <Compile Include="Assets\MichaelPattieScripts\Follow.cs" />
     <Compile Include="Assets\MichaelPattieScripts\MoveRight.cs" />
     <Compile Include="Assets\MichaelPattieScripts\MoveRightIndependent.cs" />
+    <Compile Include="Assets\MichaelPattieScripts\ProcessCollision.cs" />
     <Compile Include="Assets\MichaelPattieScripts\ScaleWithAirLevel.cs" />
     <Compile Include="Assets\MichaelPattieScripts\Shoot.cs" />
     <Compile Include="Assets\SeanPavlichek\Scripts\EnemyControllerBasic.cs" />
+    <Compile Include="Assets\SeanPavlichek\Scripts\Explosion.cs" />
+    <Compile Include="Assets\SeanPavlichek\Scripts\Projectile.cs" />
     <Compile Include="Assets\SeanPavlichek\Scripts\TurretFiring.cs" />
   </ItemGroup>
   <ItemGroup>
