--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,10 +45,12 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\BalloonDamager.cs" />
      <Compile Include="Assets\MichaelPattieScripts\AddLevel.cs" />
      <Compile Include="Assets\MichaelPattieScripts\Balloon.cs" />
      <Compile Include="Assets\MichaelPattieScripts\BalloonController.cs" />
      <Compile Include="Assets\MichaelPattieScripts\BalloonData.cs" />
+     <Compile Include="Assets\MichaelPattieScripts\BlockCollisionResponse.cs" />
      <Compile Include="Assets\MichaelPattieScripts\FlagBalloonCollision.cs" />
      <Compile Include="Assets\MichaelPattieScripts\FlagBasketCollision.cs" />
      <Compile Include="Assets\MichaelPattieScripts\Follow.cs" />
