--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,7 +60,9 @@
      <Compile Include="Assets\MichaelPattieScripts\ProcessCollision.cs" />
      <Compile Include="Assets\MichaelPattieScripts\ScaleWithAirLevel.cs" />
      <Compile Include="Assets\MichaelPattieScripts\Shoot.cs" />
-     <Compile Include="Assets\SeanPavlichek\Scripts\EnemyControllerBasic.cs" />
+     <Compile Include="Assets\SeanPavlichek\Scripts\EnemyControllerArcherMonkey.cs" />
+     <Compile Include="Assets\SeanPavlichek\Scripts\EnemyControllerAxeMonkey.cs" />
+     <Compile Include="Assets\SeanPavlichek\Scripts\EnemyControllerLancerMonkey.cs" />
      <Compile Include="Assets\SeanPavlichek\Scripts\Explosion.cs" />
      <Compile Include="Assets\SeanPavlichek\Scripts\Projectile.cs" />
      <Compile Include="Assets\SeanPavlichek\Scripts\TurretFiring.cs" />
